--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -7,7 +7,7 @@ on:
       - main
       - feature/*
 permissions:
-  contents: read
+  contents: write
 jobs:
   test-and-deploy:
     name: Test and deploy
@@ -29,4 +29,4 @@ jobs:
           version: latest
           args: release
         env:
-          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
