Updated to go1.21 and dependencies

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -4,7 +4,7 @@ bin/protoc-gen-twirp: ../go.mod
 	GOBIN=$(bin_dir) go install github.com/twitchtv/twirp/protoc-gen-twirp
 
 bin/protoc-gen-go: ../go.mod
-	GOBIN=$(bin_dir) go install github.com/golang/protobuf/protoc-gen-go
+	GOBIN=$(bin_dir) go install google.golang.org/protobuf/cmd/protoc-gen-go
 
 rpc/testservice/service.pb.go: bin/protoc-gen-twirp bin/protoc-gen-go
 	PATH="$(bin_dir):$(PATH)" protoc \
