--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 before:
   hooks:
     - go mod download
@@ -26,11 +27,11 @@ changelog:
       - '^docs:'
       - '^test:'
 brews:
-  - tap:
+  - repository:
       owner: Infomaker
       name: homebrew-core
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-    folder: Formula
+    directory: Formula  # Ändrat från 'folder' till 'directory'
     homepage: https://github.com/navigacontentlab/panurge
     description: Panurge utility
     url_template: "https://github.com/navigacontentlab/panurge/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
